[package]
name = "notifyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.19"
md5 = "0.7.0"
mdns-sd = "0.7.3"
rouille = "3.6.2"
rust_cast = "0.18.1"
serde = { version = "1.0.181", features = ["derive"] }
simple-mdns = { version = "0.4.1", features = ["sync"] }
soloud = "1.0.3"
tempdir = "0.3.7"
which = "4.4.0"
