[package]
name = "notifyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "3.2.25", features = ["derive"] }
dns-lookup = "2.0.2"
gethostname = "0.4.3"
local-ip-address = "0.5.4"
log = "0.4.19"
md5 = "0.7.0"
rouille = "3.6.2"
serde = { version = "1.0.181", features = ["derive"] }
simple-mdns = { version = "0.4.1", features = ["sync"] }
soloud = "1.0.3"
tempdir = "0.3.7"
which = "4.4.0"
